<?xml version="1.0"?>
<package format="2">
	<name>test_robot_st_pub</name>
	<version>1.0.0</version>
	<description>
    The test_robot_st_pub package
	</description>
	<license>BSD</license>
	<author email="sweilz.w@gmail.com">Liews Wuttipat</author>
	<maintainer email="sweilz.w@gmail.com">Liews Wuttipat</maintainer>
	<url type="repository">https://github.com/MyRobod/test_robot_st_pub</url>
	<buildtool_depend>catkin</buildtool_depend>
</package>

